// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Chip Chip Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-6urwc-Chip"
      >
        <div
          className="css-1fvu4zc-Chip"
          data-testid="chip"
        >
          <div>
            Medium Size
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-6urwc-Chip"
      >
        <div
          className="css-1v68bz-Chip"
          data-testid="chip"
        >
          <div>
            Small Size
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Chip Styles 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-6urwc-Chip"
      >
        <div
          className="css-1fvu4zc-Chip"
          data-testid="chip"
        >
          <div>
            Filled Style
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-6urwc-Chip"
      >
        <div
          className="css-j8kora-Chip"
          data-testid="chip"
        >
          <div>
            Outlined Style
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Chip with Icons 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          className="css-1in66tu-ChipShowcase"
        >
          <div
            className="css-6urwc-Chip"
          >
            <div
              className="css-j6c31e-Chip"
              data-testid="chip"
            >
              <div
                className="css-1sj8eh0-Chip"
              >
                <img
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                />
              </div>
              <div>
                <div>
                  Label Text
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1in66tu-ChipShowcase"
        >
          <div
            className="css-6urwc-Chip"
          >
            <div
              className="css-1n5gdv8-Chip"
              data-testid="chip"
            >
              <div>
                <div>
                  Label Text
                </div>
              </div>
              <div
                className="css-1sj8eh0-Chip"
              >
                <img
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1in66tu-ChipShowcase"
        >
          <div
            className="css-6urwc-Chip"
          >
            <div
              className="css-k44myg-Chip"
              data-testid="chip"
            >
              <div
                className="css-1wo0jal-Chip"
                onClick={[Function]}
              >
                <img
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                />
              </div>
              <div>
                <div>
                  Label Text
                </div>
              </div>
              <div
                className="css-1wo0jal-Chip"
                onClick={[Function]}
              >
                <img
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Dynamic Chip Props 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-6urwc-Chip"
      >
        <div
          className="css-1fvu4zc-Chip"
          data-testid="chip"
        >
          <div>
            <div>
              change me!
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
